优化快捷键，dr-select

--- a/src/app/core/components/dr-date/dr-date.component.html
+++ b/src/app/core/components/dr-date/dr-date.component.html
@@ -3,7 +3,7 @@
     <ng-container *ngIf="type==='input'">
       <label [style.display]="nameShow?'block':'none'" class="form-label" #drDateLabelEle>{{dateName}}</label>
       <div class="input-group">
-        <input type="text" [attr.tabIndex]="tabIndex" readonly #dateInput class="form-input" (focus)="show=true"
+        <input type="text" tabindex="0" readonly #dateInput class="form-input" (focus)="show=true"
           [class.input-sm]="size==='small'" id="date" name="date" [(ngModel)]="date">
         <i class="input-group-addon form-icon fa fa-calendar" [class.icon-sm]="size==='small'"
           (click)="show = !show"></i>
