--- a/src/app/modules/account/components/expense/expense-add-edit/expense-add-edit.component.html
+++ b/src/app/modules/account/components/expense/expense-add-edit/expense-add-edit.component.html
@@ -8,42 +8,35 @@
       <!-- 日期&支出地点 -->
       <div class="columns">
         <div class="column col-6">
-          <dr-date [tabIndex]="2" [type]="'input'" [dateName]="'日期'" [nameShow]="true" [size]="'middle'"
-            [viewType]="'day'" formControlName="expenseDate" [ngModel]="expense.expenseDate"
-            (ngModelChange)="onSetDate($event)"></dr-date>
+          <dr-date [type]="'input'" [dateName]="'日期'" [nameShow]="true" [size]="'middle'" [viewType]="'day'"
+            formControlName="expenseDate" [ngModel]="expense.expenseDate" (ngModelChange)="onSetDate($event)"></dr-date>
         </div>
-        <div class="column col-6"
-          [class.has-error]="expenseForm.get('address').errors && (expenseForm.get('address').dirty || expenseForm.get('address').touched)">
-          <dr-select formControlName="address" [(ngModel)]="expenseDetail.addressId" [list]="baseData.addressList"
-            [icon]="'form-icon icon icon-location'" [title]="'支出地点'" [tabIndex]="3"
-            [addEditComponentName]="'address-add-edit'" [addEditComponentData]="null"></dr-select>
-          <p class="form-input-hint"
-            *ngIf="expenseForm.get('address').errors && (expenseForm.get('address').dirty || expenseForm.get('address').touched)">
+        <div class="column col-6" [class.has-error]="valid('address')">
+          <dr-select formControlName="address" [(ngModel)]="expenseDetail.addressId" [list]="baseData.addressList" [model]="'address'"
+            [icon]="'form-icon icon icon-location'" [title]="'支出地点'" [addEditComponentName]="'address-add-edit'"
+            [addEditComponentData]="null"></dr-select>
+          <p class="form-input-hint" *ngIf="valid('address')">
             支出地点不能为空</p>
         </div>
       </div>
 
       <!-- 支出类别&收款方 -->
       <div class="columns">
-        <div class="column col-6"
-          [class.has-error]="expenseForm.get('expenseCategory').errors && (expenseForm.get('expenseCategory').dirty || expenseForm.get('expenseCategory').touched)">
+        <div class="column col-6" [class.has-error]="valid('expenseCategory')">
           <dr-select formControlName="expenseCategory" [(ngModel)]="expenseDetail.expenseCategoryId"
-            [list]="expenseCategoryList" [icon]="'form-icon fa fa-th-large'" [title]="'支出类别'" [tabIndex]="3"
+            [list]="expenseCategoryList" [icon]="'form-icon fa fa-th-large'" [title]="'支出类别'" [model]="'expenseCategory'"
             [addEditComponentName]="'expenseCategory-add-edit'" [addEditComponentData]="expenseCategoryAddEditData">
           </dr-select>
-          <p class="form-input-hint"
-            *ngIf="expenseForm.get('expenseCategory').errors && (expenseForm.get('expenseCategory').dirty || expenseForm.get('expenseCategory').touched)">
+          <p class="form-input-hint" *ngIf="valid('expenseCategory')">
             支出类别不能为空
           </p>
         </div>
-        <div class="column col-6"
-          [class.has-error]="expenseForm.get('fundParty').errors && (expenseForm.get('fundParty').dirty || expenseForm.get('fundParty').touched)">
+        <div class="column col-6" [class.has-error]="valid('fundParty')">
           <dr-select formControlName="fundParty" [(ngModel)]="expenseDetail.fundPartyId" [list]="fundPartyList"
-            [icon]="'form-icon fa fa-share'" [title]="'商家'" [tabIndex]="4" [addEditComponentName]="'fundParty-add-edit'"
-            [addEditComponentData]="null">
+            [icon]="'form-icon fa fa-share'" [model]="'fundParty'" [title]="'商家'" [addEditComponentName]="'fundParty-add-edit'"
+            [addEditComponentData]="fundPartyAddEditData">
           </dr-select>
-          <p class="form-input-hint"
-            *ngIf="expenseForm.get('fundParty').errors && (expenseForm.get('fundParty').dirty || expenseForm.get('fundParty').touched)">
+          <p class="form-input-hint" *ngIf="valid('fundParty')">
             商家不能为空
           </p>
         </div>
@@ -51,26 +44,22 @@
 
       <!-- 付款渠道&付款账户 -->
       <div class="columns">
-        <div class="column col-6"
-          [class.has-error]="expenseForm.get('fundChannel').errors && (expenseForm.get('fundChannel').dirty || expenseForm.get('fundChannel').touched)">
+        <div class="column col-6" [class.has-error]="valid('fundChannel')">
           <dr-select formControlName="fundChannel" [(ngModel)]="expenseDetail.fundChannelId"
             (ngModelChange)="onSetFundChannel($event)" [list]="baseData.fundChannelList"
-            [icon]="'form-icon fa fa-map-signs'" [title]="'付款方式'" [tabIndex]="5"
-            [addEditComponentName]="'fundChannel-add-edit'" [addEditComponentData]="null">
+            [icon]="'form-icon fa fa-map-signs'" [model]="'fundChannel'" [title]="'付款方式'" [addEditComponentName]="'fundChannel-add-edit'"
+            [addEditComponentData]="null">
           </dr-select>
-          <p class="form-input-hint"
-            *ngIf="expenseForm.get('fundChannel').errors && (expenseForm.get('fundChannel').dirty || expenseForm.get('fundChannel').touched)">
+          <p class="form-input-hint" *ngIf="valid('fundChannel')">
             付款方式不能为空
           </p>
         </div>
-        <div class="column col-6"
-          [class.has-error]="expenseForm.get('fundAccount').errors && (expenseForm.get('fundAccount').dirty || expenseForm.get('fundAccount').touched)">
+        <div class="column col-6" [class.has-error]="valid('fundAccount')">
           <dr-select formControlName="fundAccount" [(ngModel)]="expenseDetail.fundAccountId" [list]="fundAccountList"
-            [icon]="'form-icon fa fa-folder-open'" [title]="'付款账户'" [tabIndex]="6"
-            [addEditComponentName]="'fundAccount-add-edit'" [addEditComponentData]="null">
+            [icon]="'form-icon fa fa-folder-open'"  [model]="'fundAccount'"  [title]="'付款账户'" [addEditComponentName]="'fundAccount-add-edit'"
+            [addEditComponentData]="null">
           </dr-select>
-          <p class="form-input-hint"
-            *ngIf="expenseForm.get('fundAccount').errors && (expenseForm.get('fundAccount').dirty || expenseForm.get('fundAccount').touched)">
+          <p class="form-input-hint" *ngIf="valid('fundAccount')">
             支付账户不能为空
           </p>
         </div>
@@ -78,24 +67,20 @@
       <fieldset>
         <legend>支出明细</legend>
         <div class="columns">
-          <div class="form-group column col-6"
-            [class.has-error]="expenseForm.get('content').errors && (expenseForm.get('content').dirty || expenseForm.get('content').touched)">
-            <input class="form-input" [tabIndex]="7" type="text" formControlName="content"
+          <div class="form-group column col-6" [class.has-error]="valid('content')">
+            <input class="form-input" #contentInputEle type="text" formControlName="content"
               [(ngModel)]="expenseDetail.content" placeholder="支出内容">
-            <p class="form-input-hint"
-              *ngIf="expenseForm.get('content').errors && (expenseForm.get('content').dirty || expenseForm.get('content').touched)">
+            <p class="form-input-hint" *ngIf="valid('content')">
               支出内容不能为空
             </p>
           </div>
-          <div class="column col-6"
-            [class.has-error]="expenseForm.get('amount').errors && (expenseForm.get('amount').dirty || expenseForm.get('amount').touched)">
+          <div class="column col-6" [class.has-error]="valid('amount')">
             <div class="input-group">
-              <input class="form-input" [tabIndex]="8" formControlName="amount" [(ngModel)]="expenseDetail.amount"
-                type="number" step="0.01" placeholder="支出金额">
+              <input class="form-input" formControlName="amount" [(ngModel)]="expenseDetail.amount" type="number"
+                step="0.01" placeholder="支出金额">
               <span class="input-group-addon">元</span>
             </div>
-            <p class="form-input-hint"
-              *ngIf="expenseForm.get('amount').errors && (expenseForm.get('amount').dirty || expenseForm.get('amount').touched)">
+            <p class="form-input-hint" *ngIf="valid('amount')">
               支出金额不能为空
             </p>
           </div>
