--- a/src/app/core/components/expense-category/expenseCategory-add-edit/expenseCategory-add-edit.component.html
+++ b/src/app/core/components/expense-category/expenseCategory-add-edit/expenseCategory-add-edit.component.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="form-group btn-group">
-      <button type="button" (click)="addOrEdit()" class="btn btn-primary">{{data?'编 辑':'添 加'}}</button>
+      <button type="button" (click)="addOrEdit()" class="btn btn-primary">{{data?.value?'编 辑':'添 加'}}</button>
       <button type="button" (click)="cancel()" class="btn btn-link">取 消</button>
     </div>
   </form>
