--- a/src/app/core/components/label/label-select/label-select.component.scss
+++ b/src/app/core/components/label/label-select/label-select.component.scss
@@ -7,7 +7,13 @@ main {
   flex-direction: row;
   align-items: center;
   min-height: 26px;
+
+  &:focus {
+    outline: none;
+  }
 }
+
+
 
 .content {
   flex-grow: 1;
